--- a/src/main/fabric8/route.yml
+++ b/src/main/fabric8/route.yml
@@ -1,7 +1,7 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 spec:
-  host: ${project.artifactId}.apps.demo.jpsdavidson.net
+  host: ${project.artifactId}.${domain}
   to:
     kind: Service
     name: ${project.artifactId}
